<resources>
    <string name="app_name">Pizza Party</string>
    <string name="noOfPeople">Number of people?</string>
    <string name="howHungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="totalPizza">Total pizzas: ?</string>
    <string name="calculate">Calculate</string>
    <string name="total_pizzas_num">Total pizzas: %d</string>
    <string name="neha">Neha</string>
    <string name="neha1">neha1</string>
    <string name="neha2">neha2</string>
</resources>