<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/pizza2"
    tools:context="com.zybooks.pizzaparty.MainActivity">

    <TextView
        android:id="@+id/no_of_people_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/num_attend_edit_text"
        android:text="@string/noOfPeople"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/neha2"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/no_of_people_text_view"
        app:layout_constraintTop_toTopOf="@id/no_of_people_text_view" />


    <TextView
        android:id="@+id/how_hungry_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/hungry_radio_group"
        android:text="@string/howHungry"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_of_people_text_view"/>

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_hungry_text_view">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_text_size"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/medium_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_text_size"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_text_size"
            android:text="@string/ravenous" />
    </RadioGroup>

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/totalPizza"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hungry_radio_group"/>

    <Button
        android:id="@+id/calc_button"
        style="@style/CalcButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:onClick="calculateClick"

        android:text="@string/calculate"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_pizzas_text_view" />



</androidx.constraintlayout.widget.ConstraintLayout>
<!--</LinearLayout>-->